# lanpartydb-lib-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/lanpartydb/: models.py  reading.py  writing.py
tests/reading/: test_read_series_list_from_toml.py  test_reading_party.py  test_reading_series.py
tests/writing/: test_serialize_party.py
