[project]
name = "lanpartydb"
version = "0.2.0"
description = "Python library for the OrgaTalk LAN Party Database"
authors = [
    { name = "Jochen Kupperschmidt", email = "homework@nwsnet.de" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }
keywords = [ "lanparty" ]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lanpartydb"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
order-by-type = false
