[project]
name = "lanpartydb"
version = "0.9.1"
description = "Python library for the OrgaTalk LAN Party Database"
readme = "README.md"
authors = [
    { name = "Jochen Kupperschmidt", email = "homework@nwsnet.de" }
]
requires-python = ">=3.11"
dependencies = [
    "tomlkit>=0.13.2",
]
license = { text = "MIT" }
keywords = [ "lanparty" ]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/lanpartydb/lib-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]
test = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
order-by-type = false
